add images for tea

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -2408,6 +2408,135 @@
           }
         ]
       }
+    },
+    "59": {
+      "name": "كاكاو بالحليب  ",
+      "desc": "نكهة الطفولة مع مشروب الكاكاو بالحليب، مزيج لذيذ من الكاكاو الناعم والحليب الكريمي.مشروب مثالي في ليالي الشتاء أو لحظات الراحة، يمنحك شعورًا بالدفء والسكينة في كل رشفة.",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "",
+          ""
+        ],
+        "IngredientsTitle": "الفوائد",
+        "Ingredients": [
+          
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          
+        ],
+        "poductSpecifications": [
+           {
+              "title": "الوزن الصافي",
+              "desc": ""
+          },
+          {
+              "title": "عدد الظروف",
+              "desc": "10"
+          },
+          {
+              "title": "النوع",
+              "desc": "مشروبات ساخنة"
+          }
+        ]
+      }
+    },
+    "60": {
+      "name": "شاي برتقالي فرط",
+      "desc": "تجربة الشاي الأصيلة مع الشاي البرتقالي الفرط عالي الجودة، المستورد من سريلانكا، حيث تُزرع أفضل أنواع الشاي في العالم. ",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "تعبأ بعناية في علبة تحافظ على نضارة الأوراق وجودتها لأطول فترة ممكنة، كل ورقة شاي مختارة بعناية فائقة لتمنحك نكهة غنية وقوية، مع تركيز طعم مثالي.",
+          ""
+        ],
+        "IngredientsTitle": "المميزات",
+        "Ingredients": [
+          "علبة محكمة الإغلاق تحافظ على النكهة والرطوبة بعيدًا عن الهواء",
+          "تحكم كامل في كمية الشاي لتحضير مثالي حسب ذوقك"
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          
+        ],
+        "poductSpecifications": [
+           {
+              "title": "الوزن الصافي",
+              "desc": "90,200,400 غ"
+          },
+          {
+              "title": "النوع",
+              "desc": "شاي"
+          }
+        ]
+      }
+    },
+    "61": {
+      "name": "شاي أسود فرط",
+      "desc": "نكهة نقية وتقاليد أصيلة من قلب سريلانكا ",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "تجربة الشاي الأصيلة مع الشاي الأسود الفرط عالي الجودة، المستورد من سريلانكا، حيث تُزرع أفضل أنواع الشاي في العالم. ",
+          "تعبأ بعناية في علبة تحافظ على نضارة الأوراق وجودتها لأطول فترة ممكنة، كل ورقة شاي مختارة بعناية فائقة لتمنحك نكهة غنية وقوية، مع تركيز طعم مثالي."
+        ],
+        "IngredientsTitle": "المميزات",
+        "Ingredients": [
+          "علبة محكمة الإغلاق تحافظ على النكهة والرطوبة بعيدًا عن الهواء",
+          "تحكم كامل في كمية الشاي لتحضير مثالي حسب ذوقك"
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          
+        ],
+        "poductSpecifications": [
+           {
+              "title": "الوزن الصافي",
+              "desc": "400 غ"
+          },
+          {
+              "title": "النوع",
+              "desc": "شاي"
+          }
+        ]
+      }
+    },
+    "62": {
+      "name": "شاي أسود ظرف",
+      "desc": "الشاي الأسود الفاخر المحفوظ داخل ظرف مغلق داخل إنفلوب خاص يحافظ على النكهة الطازجة لأطول فترة ممكنة.",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "كل ظرف محمي بعناية ليصل إليك بمذاق غني يعكس أصالة الشاي وجودته.",
+          "شاينا الأسود يتميز بنكهة قوية وعميقة،مع ضمان أن طعمه لم يتغير من وقت التعبئة حتى لحظة التحضير."
+        ],
+        "IngredientsTitle": "المميزات",
+        "Ingredients": [
+          " أوراق شاي مختارة بعناية وجودة عالية",
+          "إنفلوب خاص يحفظ نضارة الشاي ونكهته الطازجة",
+          "ظرف Tea Bag سهل الاستخدام وسريع التحضير",
+          "نكهة متوازنة "
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          
+        ],
+        "poductSpecifications": [
+          {
+              "title": "الوزن الصافي",
+              "desc": ""
+          },
+          {
+              "title": "عدد الظروف",
+              "desc": "20,25"
+          },
+          {
+              "title": "النوع",
+              "desc": "شاي"
+          }
+        ]
+      }
     }
   },
   "event": {
