add events data

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -2541,20 +2541,40 @@
   },
   "event": {
     "1": {
-      "name": "الحدث الأول",
-      "location": "نيويورك، الولايات المتحدة الأمريكية"
+      "name": "زيارة جمعية المساعي الخيرية - دار الأيتام",
+      "location": "اللاذقية-الصليبة"
     },
     "2": {
-      "name": "الحدث الثاني",
-      "location": "لندن، المملكة المتحدة"
+      "name": "فعالية جمعية ملجأ الأيتام",
+      "location": "حماة-الضاحية"
     },
     "3": {
-      "name": "الحدث الثالث",
-      "location": "باريس، فرنسا"
+      "name": "الراعي الرسمي لبطولة النصر لكرة الطاولة  ضمن مدينة تشرين الرياضية",
+      "location": "دمشق-البرامكة"
     },
     "4": {
-      "name": "الحدث الرابع",
-      "location": "طوكيو، اليابان"
+      "name": "بمناسبة شهر رمضان المبارك في رعاية إفطار دار الأيتام",
+      "location": "دمشق"
+    },
+    "5": {
+      "name": "معرض إكسبو للصادرات السورية ",
+      "location": "دمشق-مدينة المعارض"
+    },
+    "6": {
+      "name": "مأدبة إفطار رمضانية للأسر العفيفة والأطفال الأيتام بعنوان جبر الخواطر بمناسبة شهر رمضان المبارك",
+      "location": "دمشق-البرامكة-ملعب تشرين"
+    },
+    "7": {
+      "name": "زيارة مقر جمعية بسمة لدعم الأطفال المصابين في مرض السرطان ",
+      "location": "دمشق-البرامكة-مقابل كلية الأقتصاد"
+    },
+    "8": {
+      "name": "فعالية بطولة سورية المستقبل برعاية وزارة الرياضة و اتحاد كرة القدم ",
+      "location": "دمشق-مدينة الفيحاء الرياضية"
+    },
+    "9": {
+      "name": "بمناسبة عيد الأضحى المبارك بالتنسيق مع جمعية سوا توزيع حصص على الأطفال الأيتام",
+      "location": "طرطوس-الحمرات"
     }
   },
   "studyData": [
@@ -2595,15 +2615,11 @@
         },
         {
           "id" : "2",
-          "name": "مؤتمرات طبية"
+          "name": "فعاليات رياضية"
         },
         {
           "id" : "3",
           "name": "فعاليات إنسانية"
-        },
-        {
-          "id" : "4",
-          "name": "فعاليات اجتماعية"
         }
       ]
     },
