change filters name in event page english

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2557,15 +2557,11 @@
         },
         {
           "id" : "2",
-          "name": "Medical Conferences"
+          "name": "Sporting Events"
         },
         {
           "id" : "3",
           "name": "Humanitarian Events"
-        },
-        {
-          "id" : "4",
-          "name": "Social Events"
         }
       ]
     },
