--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -2537,6 +2537,163 @@
           }
         ]
       }
+    },
+    "63": {
+      "name": "3 بـ 1 – القهوة السريعة بطعم متوازن",
+      "desc": "القهوة السريعة بنكهة متوازنة وسهلة التحضير، 3 بـ 1 هو خيار مثالي. مزيج مثالي من القهوة، الحليب، والسكر، لتستمتع بكوب غني.",
+      "details":{
+        "descTitle": "",
+        "desc" : [
+          "",
+          ""
+        ],
+        "IngredientsTitle": "",
+        "Ingredients": [
+          
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          
+        ],
+        "poductSpecifications": [
+          {
+              "title": "الوزن الصافي",
+              "desc": ""
+          },
+          {
+              "title": "عدد الظروف",
+              "desc": "24"
+          },
+          {
+              "title": "النوع",
+              "desc": "مشروبات ساخنة"
+          }
+        ]
+      }
+    },
+    "64": {
+      "name": "عصير بودرة سريع التحضير",
+      "desc": "النكهة الكلاسيكية المحببة للجميع، تجمع بين الحلاوة الخفيفة والحموضة المنعشة. يمنحك هذا العصير إحساسًا بالطاقة والانتعاش الفوري.",
+      "details":{
+        "descTitle": "انتعاش طبيعي... بنكهة فاكهية غنية",
+        "desc" : [
+          "اكتشف طعم الانتعاش الحقيقي مع عصير البودرة من علامتنا التجارية. تصميم عملي في ظرف صغير وسهل الاستخدام، يتحول خلال ثوانٍ إلى مشروب لذيذ ومنعش بمجرد إضافة الماء وتحريكه.",
+          "تركيبتنا المتوازنة والسريعة الذوبان تمنحك تجربة مثالية في كل مرة، سواء في المنزل أو في العمل أو أثناء التنقل. نقدّم لك مجموعة متنوعة من النكهات الطبيعية لتستمتع بكل رشفة بنكهات غنية تُرضي كل الأذواق."
+        ],
+        "IngredientsTitle": "",
+        "Ingredients": [
+          
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          
+        ],
+        "poductSpecifications": [
+          {
+            "title": "Net Weight",
+            "desc": ""
+          },
+          {
+            "title": "Bags",
+            "desc": "24"
+          },
+          {
+            "title": "Type",
+            "desc": "عصير"
+          }
+        ]
+      }
+    },
+    "65": {
+      "name": "عصير البرتقال بودرة سريع التحضير",
+      "desc": "نكهة البرتقال الكلاسيكية المحببة للجميع، تجمع بين الحلاوة الخفيفة والحموضة المنعشة. يمنحك هذا العصير إحساسًا بالطاقة والانتعاش الفوري.",
+      "details":{
+        "descTitle": "انتعاش طبيعي... بنكهة فاكهية غنية",
+        "desc" : [
+          "اكتشف طعم الانتعاش الحقيقي مع عصير البودرة من علامتنا التجارية. تصميم عملي في ظرف صغير وسهل الاستخدام، يتحول خلال ثوانٍ إلى مشروب لذيذ ومنعش بمجرد إضافة الماء وتحريكه.",
+          "تركيبتنا المتوازنة والسريعة الذوبان تمنحك تجربة مثالية في كل مرة، سواء في المنزل أو في العمل أو أثناء التنقل. نقدّم لك مجموعة متنوعة من النكهات الطبيعية لتستمتع بكل رشفة بنكهات غنية تُرضي كل الأذواق."
+        ],
+        "IngredientsTitle": "",
+        "Ingredients": [
+          
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          
+        ],
+        "poductSpecifications": [
+          {
+            "title": "Net Weight",
+            "desc": ""
+          },
+          {
+            "title": "Bags",
+            "desc": "24"
+          },
+          {
+            "title": "Type",
+            "desc": "عصير"
+          }
+        ]
+      }
+    },
+    "66": {
+      "name": "القهوة سريعة التحضير ",
+      "desc": "الطعم الأصيل للقهوة سريعة التحضير، لمحبي النكهة القوية .",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "حبيبات ناعمة تذوب فورًا، لتمنحك فنجانًا غنيًا بنكهة البن الحقيقي في أقل من دقيقة.",
+          ""
+        ],
+        "IngredientsTitle": "",
+        "Ingredients": [
+          
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          
+        ],
+        "poductSpecifications": [
+          {
+            "title": "الوزن الصافي",
+            "desc": ""
+          },
+          {
+            "title": "النوع",
+            "desc": "قهوة"
+          }
+        ]
+      }
+    },
+    "67": {
+      "name": "القهوة سريعة التحضير مع الهيل ",
+      "desc": "الطعم الأصيل للقهوة سريعة التحضير مع الهيل، لمحبي النكهة القوية .",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "حبيبات ناعمة تذوب فورًا، لتمنحك فنجانًا غنيًا بنكهة البن الحقيقي في أقل من دقيقة.",
+          ""
+        ],
+        "IngredientsTitle": "",
+        "Ingredients": [
+          
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          
+        ],
+        "poductSpecifications": [
+          {
+            "title": "الوزن الصافي",
+            "desc": ""
+          },
+          {
+            "title": "النوع",
+            "desc": "قهوة"
+          }
+        ]
+      }
     }
   },
   "event": {
