--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -117,73 +117,73 @@
   "centers": [
     {
       "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "location": "المليحة - بعد حاجز النسيم- طريق شبعا -دخلة شركة اسيل",
+      "phone": "+963 11 5661112"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز طرطوس",
+      "location": "منطقه الصناعيه بيت كمونة -قسم الغذائية مقابل سور الرحبه",
+      "phone": "+963 43 2554355"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز اللاذقية",
+      "location": "بعد جسر المزيرعة ب500م",
+      "phone": "+963 41 8772229"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز دريكيش",
+      "location": "غربي دوار الشهداء 200م حي الدقارة مقابل فروج اليمامة",
+      "phone": "لا يوجد"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز حمص",
+      "location": "باب عمرو- السلطانية -جوبر-اتجاه شركة المتين منطقة عين الزرقا",
+      "phone": "لا يوجد"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز الحواش",
+      "location": "طريق العام قرب الكازية - بنك بيمو",
+      "phone": "+963 31 7443980"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز حماة",
+      "location": "كرم الحوراني.دوار الكرة الارضية.مقابل مشفى الحوراني",
+      "phone": "+963 33 2520782"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز السلمية",
+      "location": "شارع السعن جانب مدرسة الحرس القومي",
+      "phone": "+963 33 8835547"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز السويداء",
+      "location": "عتيل الشارع العام جانب كازية عامر",
+      "phone": "+963 16 357656"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز مصياف",
+      "location": "مصياف - قرب مقصف الوراقة",
+      "phone": "+963 33 7719982"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز النبك",
+      "location": "الحي الشرقي - مفرق جامع بدر - بناية أبو مصطفى بحبوح",
+      "phone": "+963 43 7245271"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز قطنا",
+      "location": "اول مساكن العاشرة - مدرسة علي غازي طالب",
+      "phone": "+963 11 6892889"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز درعا",
+      "location": "بصير - الحي الجنوبي",
+      "phone": "+963 15 5444322"
     },
     {
-      "name": "مركز دمشق",
-      "location": "يبرود,ريف دمشق,سوريا",
-      "phone": "+963 11 9493 / 9381"
+      "name": "مركز حلب",
+      "location": "المشهد - صيدلية الاتاسي",
+      "phone": "لا يوجد"
     }
   ],
   "productDetails": "تفاصيل المنتج",
