remove arabic lorem content for mate

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -192,50 +192,24 @@
       "name": "خارطة",
       "desc": "نحن نتميّز بخبرة عريقة في مجال تعبئة المتة، حيث نمتلك معملًا متطوّرًا مزوّدًا بأحدث الآلات فقد أثمر هذا التخصص عن امتلاكنا ماركة خاصة بنا في السوق تحمل اسمًا يُجسّد الثقة والجودة (خارطة الخضراء)، وتُعبّر عن التزامنا بتقديم منتجات تلبي أذواق المستهلكين وتُحاكي توقعاتهم.",
       "details":{
-        "descTitle": "الوصف",
+        "descTitle": "",
         "desc" : [
-          "يُعتبر مشروب الزهورات من أفضل المشروبات التي تحمي من نزلات البرد والإنفلونزا والسعال الذي يزداد في فصل الشتاء.",
-          "كما أنه يُساعد على طرد السموم من الجسم، ويقوي جهاز المناعة، ويُخفف الصداع، ويُزيل الانتفاخ، ويُساعد على الهضم."
         ],
-        "IngredientsTitle": "المكونات",
+        "IngredientsTitle": "",
         "Ingredients": [
-          "ورد جوري",
-          "مليسة",
-          "نعنع فلفلي",
-          "متة",
-          "زهرة الربيع",
-          "بابونج",
-          "شاي أخضر"
+
         ],
-        "usageInstructionsTitle": "طريقة التحضير",
+        "usageInstructionsTitle": "",
         "usageInstructions": [
-          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زهورات طبيعية) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
-          "إذا كنت ترغب في نكهة أقوى، اترك الكيس في الماء لمدة 4 دقائق."
         ],
         "poductSpecifications": [
            {
               "title": "الوزن الصافي",
-              "desc": "- 44g"
-          },
-          {
-              "title": "عدد الظروف",
-              "desc": "20"
+              "desc": "200,250,500 g"
           },
           {
               "title": "النوع",
-              "desc": "مشروب ساخن"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
+              "desc": "متة"
           }
         ]
       }
@@ -244,50 +218,24 @@
       "name": "بيبوري",
       "desc": "نفخر بأننا وكيل وممثل لعلامة بيبوري، وهي واحدة من أبرز علامات المتة المستوردة في السوق السوري، والمعروفة بجودتها العالية وتنوع خلطاتها. بفضل علاقتنا الوثيقة مع الموردين وشركائنا في الأرجنتين، حصلنا على امتياز تعبئة وتوزيع هذه العلامة رسميًا في سوريا، مما يعكس ثقة الشركاء الدوليين بخبرتنا وكفاءتنا في هذا المجال.",
             "details":{
-        "descTitle": "الوصف",
+        "descTitle": "",
         "desc" : [
-          "يُعتبر مشروب الزهورات من أفضل المشروبات التي تحمي من نزلات البرد والإنفلونزا والسعال الذي يزداد في فصل الشتاء.",
-          "كما أنه يُساعد على طرد السموم من الجسم، ويقوي جهاز المناعة، ويُخفف الصداع، ويُزيل الانتفاخ، ويُساعد على الهضم."
         ],
-        "IngredientsTitle": "المكونات",
+        "IngredientsTitle": "",
         "Ingredients": [
-          "ورد جوري",
-          "مليسة",
-          "نعنع فلفلي",
-          "متة",
-          "زهرة الربيع",
-          "بابونج",
-          "شاي أخضر"
+          
         ],
-        "usageInstructionsTitle": "طريقة التحضير",
+        "usageInstructionsTitle": "",
         "usageInstructions": [
-          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زهورات طبيعية) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
-          "إذا كنت ترغب في نكهة أقوى، اترك الكيس في الماء لمدة 4 دقائق."
         ],
         "poductSpecifications": [
            {
               "title": "الوزن الصافي",
-              "desc": "- 44g"
-          },
-          {
-              "title": "عدد الظروف",
-              "desc": "20"
+              "desc": ""
           },
           {
               "title": "النوع",
-              "desc": "مشروب ساخن"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
+              "desc": "متة"
           }
         ]
       }
@@ -296,50 +244,31 @@
       "name": "ترغواي",
       "desc": "نغتحر بأن شركتنا تحمل الامتياز الحصري لعلامة Taragüi، إحدى أشهر علامات المتة العالمية. هذا الامتياز يعكس التقدير العالمي لمكانتنا وخبرتنا في السوق، ويمنحنا الحق الرسمي في تعبئة وتوزيع منتجات ترغواي في سوريا، بما يضمن للمستهلك منتجًا أصليًا بجودة عالية تحت إشراف مباشر من الشركة الأم.",
             "details":{
-        "descTitle": "الوصف",
+        "descTitle": "",
         "desc" : [
-          "يُعتبر مشروب الزهورات من أفضل المشروبات التي تحمي من نزلات البرد والإنفلونزا والسعال الذي يزداد في فصل الشتاء.",
-          "كما أنه يُساعد على طرد السموم من الجسم، ويقوي جهاز المناعة، ويُخفف الصداع، ويُزيل الانتفاخ، ويُساعد على الهضم."
+          "",
+          ""
         ],
-        "IngredientsTitle": "المكونات",
+        "IngredientsTitle": "",
         "Ingredients": [
-          "ورد جوري",
-          "مليسة",
-          "نعنع فلفلي",
-          "متة",
-          "زهرة الربيع",
-          "بابونج",
-          "شاي أخضر"
+          "",
+          "",
+          "",
+          ""
         ],
-        "usageInstructionsTitle": "طريقة التحضير",
+        "usageInstructionsTitle": "",
         "usageInstructions": [
-          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زهورات طبيعية) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
-          "إذا كنت ترغب في نكهة أقوى، اترك الكيس في الماء لمدة 4 دقائق."
+          "",
+          ""
         ],
         "poductSpecifications": [
            {
               "title": "الوزن الصافي",
-              "desc": "- 44g"
-          },
-          {
-              "title": "عدد الظروف",
-              "desc": "20"
+              "desc": ""
           },
           {
               "title": "النوع",
-              "desc": "مشروب ساخن"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
+              "desc": "متة"
           }
         ]
       }
@@ -3172,6 +3101,70 @@
           {
             "title": "النوع",
             "desc": "مشروبات ساخنة"
+          }
+        ]
+      }
+    },
+    "84":{
+    "name": "شاي أخضر مع الدراق ",
+      "desc": "مذاق الدراق الحلو والعطري يُضفي على الشاي الأخضر نكهة صيفية ناعمة ومميزة. تأتي العلبة بـ 20 ظرف شاي مغلف فرديًا لضمان الحفاظ على النكهة والانتعاش. ",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "خيار مثالي للاسترخاء في أي وقت من اليوم.",
+          ""
+        ],
+        "IngredientsTitle": "الفوائد",
+        "Ingredients": [
+          "يساعد في دعم صحة الجلد بفضل محتواه من فيتامين A.",
+          "يُساهم في تحسين الهضم.",
+          "يوفر تأثيرًا مهدئًا ومفيدًا للاسترخاء."
+        ],
+        "usageInstructionsTitle": "طريقة التحضير",
+        "usageInstructions": [
+          "للحفاظ على كامل النكهة، ضع ظرف كامبو (شاي أخضر مع الدراق) في كوب سعة 250 مل ثم اسكب الماء المغلي فوقه و اتركه لمدة 3 دقائق. ",
+          "إذا كنت ترغب بالحصول على نكهة أقوى، اترك الظرف لمدة 4 دقائق في الماء."
+        ],
+        "poductSpecifications": [
+          {
+            "title": "عدد الظروف",
+            "desc": "20"
+          },
+          {
+            "title": "النوع",
+            "desc": "شاي أخضر"
+          }
+        ]
+      }
+    },
+    "85":{
+    "name": "زنجبيل مع العسل والليمون",
+      "desc": "تركيبة ثلاثية المفعول تعزز المناعة وتساعد على الشعور بالراحة في الأيام الباردة. الزنجبيل، العسل، والليمون في مزيج واحد يوازن بين الطعم والفائدة.",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "كل ظرف مغلف للحفاظ على القوة الفعالة للمكونات.",
+          ""
+        ],
+        "IngredientsTitle": "الفوائد",
+        "Ingredients": [
+          "يدعم المناعة ويقاوم نزلات البرد.",
+          "يُنعش الجسم ويخفف التعب.",
+          "يُساعد على تنظيف الحلق وتحسين التنفس."
+        ],
+        "usageInstructionsTitle": "طريقة التحضير",
+        "usageInstructions": [
+          "للحفاظ على كامل النكهة، ضع ظرف كامبو (زنجبيل مع العسل والليمون) في كوب سعة 250 مل ثم اسكب الماء المغلي فوقه و اتركه لمدة 3 دقائق. ",
+          "إذا كنت ترغب بالحصول على نكهة أقوى، اترك الظرف لمدة 4 دقائق في الماء."
+        ],
+        "poductSpecifications": [
+          {
+            "title": "عدد الظروف",
+            "desc": "20"
+          },
+          {
+            "title": "النوع",
+            "desc": "شاي أخضر"
           }
         ]
       }
