solve problem of filter save state

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -205,7 +205,7 @@
         "poductSpecifications": [
            {
               "title": "الوزن الصافي",
-              "desc": "200,250,500 g"
+              "desc": "200,250,500غ"
           },
           {
               "title": "النوع",
